adding all the files

--- a/src/App.css
+++ b/src/App.css
@@ -1,539 +1,6 @@
-.bg-image {
-  height: 550px;
-  padding: 0px px;
-  width: 100%;
-}
 
-.logo-image {
-  margin-top: -464px;
-  margin-bottom: 349px;
-  margin-left: 659px;
-}
+ .bg-cover {
+  background-image: url(./background.jpg);
+}  
 
-.para {
-  margin-top: -300px;
-  font-family: Montserrat, sans-serif;
-  font-size: 30px;
-  line-height: 50px;
-  font-weight: 400;
-  width: 1120px;
-  margin-left: 339px;
-  text-align: justify;
-}
 
-.section1 h1{
-  font-size: 36px;
-  margin-top: 178px;
-  margin-left: 841px;
-}
-
-.section1 h3 {
-  font-size: 23px;
-  padding-bottom: 18px;
-  margin-bottom: 18px;
-  margin-right: 0.5rem !important;
-  margin-left: 25.5rem !important;
-  margin-top: 37px;
-}
-.section1 p {
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 31px;
-  width: 1120px;
-  margin-left: 412px;
-  margin-top: 25px;
-  text-align: justify;
-}
-.line {
-  width: 62px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 406px;
-  margin-top: 53px;
-}
-
-.ayurvediv h3 {
-  margin-top: 361px;
-  margin-left: 419px;
-}
-
-.ayurvediv p{
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 31px;
-  width: 1120px;
-  text-align: justify;
-  margin-left: 416px;
-}
-
-
-.ayurvediv li {
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  padding: 11px;
-  line-height: 40px;
-  width: 899px;
-  text-align: initial;
-  margin-left: 461px;
-}
-
-.section2 h1 {
-  margin-top: 60px;
-  margin-left: 408px;
-  font-size: 34px;
-}
-
-.section3 h1 {
-  margin-top: 60px;
-  margin-left: 408px;
-  font-size: 34px;
-}
-
-.section4 {
-  background-color: #f7f7f7;
-  margin-top: 100px;
-  height: 682px;
-}
-
-
-.section6 {
-  background-color: #f7f7f7;
-  margin-top: 378px;
-  height: 700px;
-  padding: 2rem;
-}
-
-.section8 {
-  background-color: #f7f7f7;
-  margin-top: 697px;
-  height: 750px;
-  padding: 2rem;
-}
-
-.section10 {
-  background-color: #f7f7f7;
-  margin-top: 386px;
-  height: 850px;
-  padding: 2rem;
-}
-
-
-.section12 {
-  background-color: #f7f7f7;
-  margin-top: 679px;
-  height: 850px;
-  padding: 2rem;
-}
-
-.section14 {
-  background-color: #f7f7f7;
-  margin-top: 783px;
-  height: 850px;
-  padding: 2rem;
-}
-
-
-.section16 {
-  background-color: #f7f7f7;
-  margin-top: 300px;
-  height: 600px;
-  padding: 2rem;
-}
-
-
-.udaipur-image {
-  margin-left: 429px;
-  width: 130px;
-  margin-top: 51px;
-}
-
-.section4 h1 {
-  margin-left: 599px;
-  margin-top: -228px;
-}
-
-.section4 .image-gallery {
-margin-top: 78px;
-margin-left: 70px;
-}
-
-.section4 p {
-  width: 901px;
-  margin-left: 600px;
-  text-align: justify;
-  font-size: 21px;
-}
-
-.section5 h3 {
-  font-size: 24px;
-  margin-right: 0.5rem !important;
-  margin-left: 25.5rem !important;
-  margin-top: 80px;
-  margin-bottom: 45px;
-}
-
-.section6 h3 {
-   font-size: 24px;
-    margin-right: 0.5rem !important;
-    margin-left: 25.5rem !important;
-    margin-top: 16px;
-    margin-bottom: 45px;
-}
-
-
-.section6 p {
-  text-align: initial;
-  font-size: 21px;
-  right: 447px;
-  text-align: justify;
-  position: relative;
-  left: 412px;
-  width: 976px;
-  line-height: 25px;
-}
-
-.section7 h3 {
-  font-size: 24px;
-  margin-right: 0.5rem !important;
-  margin-left: 25.5rem !important;
-  margin-top: 80px;
-  margin-bottom: 45px;
-}
-
-.section7 p {
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 31px;
-  width: 984px;
-  margin-left: 412px;
-  margin-top: 18px;
-  text-align: justify;
-}
-
-.section8 h3 {
-  font-size: 24px;
-  margin-right: 0.5rem !important;
-  margin-left: 25.5rem !important;
-  margin-top: 40px;
-  margin-bottom: 45px;
-}
-
-.section8 p {
-    text-align: initial;
-    font-size: 21px;
-    right: 447px;
-    text-align: justify;
-    position: relative;
-    left: 412px;
-    width: 976px;
-    line-height: 25px;
-}
-
-.section9 h3 {
-  font-size: 24px;
-    margin-right: 28.5rem !important;
-    margin-left: 25.5rem !important;
-    margin-top: 80px;
-    margin-bottom: 45px;
-    text-align: initial;
-}
-
-.section9 p {
-  text-align: initial;
-  font-size: 21px;
-  right: 447px;
-  text-align: justify;
-  position: relative;
-  left: 412px;
-  width: 976px;
-  line-height: 25px;
-}
-
-.section10 h3 {
-  font-size: 24px;
-  margin-right: 25.5rem !important;
-  margin-left: 24.5rem !important;
-  margin-top: 29px;
-  margin-bottom: 45px;
-}
-
-.section10 p {
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 31px;
-  width: 966px;
-  margin-left: 398px;
-  margin-top: 8px;
-  text-align: justify;
-}
-
-.section11 h3 {
-  font-size: 24px;
-  margin-right: 28.5rem !important;
-  margin-left: 25.5rem !important;
-  margin-top: 80px;
-  margin-bottom: 45px;
-  text-align: justify;
-}
-
-.section11 p {
-  text-align: initial;
-    font-size: 21px;
-    right: 447px;
-    text-align: justify;
-    position: relative;
-    left: 412px;
-    width: 976px;
-    line-height: 25px;
-}
-
-.section12 h3 {
-  font-size: 24px;
-    margin-right: 0.5rem !important;
-    margin-left: 24.5rem !important;
-    margin-top: 25px;
-    margin-bottom: 45px;
-}
-
-.section12 p {
-  font-family: Montserrat, sans-serif;
-    font-size: 20px;
-    line-height: 31px;
-    width: 964px;
-    margin-left: 392px;
-    margin-top: -1px;
-    text-align: justify;
-}
-
-.section13 h3 {
-  font-size: 24px;
-    margin-right: 0.5rem !important;
-    margin-left: 24.5rem !important;
-    margin-top: 80px;
-    margin-bottom: 45px;
-}
-
-.section13 p {
-  text-align: initial;
-  font-size: 21px;
-  right: 447px;
-  text-align: justify;
-  position: relative;
-  left: 395px;
-  width: 976px;
-  line-height: 25px;
-}
-.section14 h3 {
-  font-size: 24px;
-  margin-right: 0.5rem !important;
-  margin-left: 23.5rem !important;
-  margin-top: 28px;
-  margin-bottom: 45px;
-}
-
-.section14 p {
-  font-family: Montserrat, sans-serif;
-    font-size: 20px;
-    line-height: 31px;
-    width: 992px;
-    margin-left: 374px;
-    margin-top: -3px;
-    text-align: justify;
-}
-.section15 h3 {
-  font-size: 24px;
-  margin-right: 28.5rem !important;
-  margin-left:25.6rem  !important;
-  margin-top: 80px;
-  margin-bottom: 45px;
-  text-align: initial;
-}
-
-.section15 p {
-  text-align: initial;
-  font-size: 21px;
-  right: 447px;
-  text-align: justify;
-  position: relative;
-  left: 404px;
-  width: 976px;
-  line-height: 25px;
-}
-.section16 h3 {
-  font-size: 24px;
-  margin-right: 0.5rem !important;
-  margin-left: 23.5rem !important;
-  margin-top: 27px;
-  margin-bottom: 45px;
-}
-
-.section16 p {
-  font-family: Montserrat, sans-serif;
-  font-size: 20px;
-  line-height: 31px;
-  width: 1007px;
-  margin-left: 375px;
-  margin-top: 2px;
-  text-align: justify;
-}
-.section17 h3 {
-  font-size: 24px;
-  margin-right: 28.5rem !important;
-  margin-left: 25.5rem !important;
-  margin-top: 80px;
-  margin-bottom: 45px;
-  text-align: justify;
-}
-
-.section17 p {
-  text-align: initial;
-  font-size: 21px;
-  right: 447px;
-  text-align: justify;
-  position: relative;
-  left: 404px;
-  width: 976px;
-}
-
-
-.line1 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 601px;
-  margin-top: -518px;
-}
-
-.line2 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 408px;
-  margin-top: -393px;
-}
-
-.line3 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 408px;
-  margin-top: -305px;
-}
-  .line4 {
-    width: 102px;
-    height: 47px;
-    border-bottom: 7px solid orange;
-    margin-left: 408px;
-    margin-top: -600px;
-  }
-
-  .line5 {
-    width: 102px;
-    height: 47px;
-    border-bottom: 7px solid orange;
-    margin-left: 408px;
-    margin-top: -680px;
-  }
-
-.line6{
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 408px;
-  margin-top: -573px;
-}
-.line7 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 408px;
-  margin-top: -375px;
-}
-
-
-.line8 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 390px;
-  margin-top: -720px;
-}
-
-
-.line9 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 408px;
-  margin-top: -650px;
-}
-
-.line10 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 390px;
-  margin-top: -740px;
-}
-.line11 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 390px;
-  margin-top: -770px;
-}
-.line12 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 410px;
-  margin-top: -300px;
-}
-.line13 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 374px;
-  margin-top: -462px;
-}
-.line14 {
-  width: 102px;
-  height: 47px;
-  border-bottom: 7px solid orange;
-  margin-left: 410px;
-  margin-top: -810px;
-}
-
-.footer {
-  background-color: #c14a4a;
-  padding: 10px;
-  margin-top: 870px;
-}
-
-
-@media (min-width: 576px) { 
-.bg-image{
-  width: 807px;
- }
-
- }
-
- @media (min-width: 768px) { 
-
-
-  }
-
-  @media (min-width: 992px) { 
-
-
-   }
-
-   @media (min-width: 1200px) { 
-
-
-   }
-
-   @media (min-width: 1400px) { 
-
-    
-    }
